# gpt-v1

./: README.md  data_loader.py  gpt2.py  gpt_config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: eval.py  infer.py  train.py
src/data/: data_loader.py
src/models/: gpt2.py
tests/: test_data_loader.py  test_gpt2.py
